updated ref path

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>SalafiyyahColombiaApp</title>
-  <base href="/">
+  <base href="/salafiyyah-colombia-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="verify-v1" content="salafiyyah-colombia">
   <meta name="google-site-verification" content="salafiyyah-colombia">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
